# electrohub

./: .env.sample  .gitignore  pyproject.toml
config/: settings.py  urls.py
electronics_hub/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
electronics_hub/migrations/: 0001_initial.py
